@@ -18,7 +18,6 @@ isRelease <- length(unclass(utils::packageVersion("anytime"))[[1]]) == 3
 ## may lack zoneinfo or something else that is basic and expect.
 
 ref <- anytime("2016-09-01 10:11:12")
-expect_equal(ref, anytime("2016-09-01 101112"))
 
 if (isSolaris || isWindows || isRelease) exit_file("Skipping Solaris or Windows or Release")
 
@@ -26,15 +25,26 @@ options(digits.secs=6, width=70)
 
 ##ref <- format(as.POSIXct(c("2016-09-01 10:11:12", "2016-09-01 10:11:12.345678")))
 ##expect_equal(ref, format(anytime(c("2016-09-01 10:11:12", "2016-09-01 10:11:12.345678"))))
-ref <- format(anytime(c("2016-09-01 10:11:12", "2016-09-01 10:11:12.345678")))
-expect_equal(ref, format(anytime(c("2016-09-01 101112",   "2016-09-01 101112.345678"))))
-expect_equal(ref, format(anytime(c("2016/09/01 10:11:12", "2016/09/01 10:11:12.345678"))))
-expect_equal(ref, format(anytime(c("20160901 101112",     "20160901 101112.345678"))))
-expect_equal(ref, format(anytime(c("20160901 10:11:12",   "20160901 10:11:12.345678"))))
-expect_equal(ref, format(anytime(c("09/01/2016 10:11:12", "09/01/2016 10:11:12.345678"))))
-expect_equal(ref, format(anytime(c("09-01-2016 10:11:12", "09-01-2016 10:11:12.345678"))))
-## anytime(c("01.09.2016 10:11:12", "01.09.2016 10:11:12.345678")) # European format gets confused with m/d/y
+ref <- anytime("2016-09-01 10:11:12")
+expect_equal(ref, anytime("2016-09-01 101112"))
+expect_equal(ref, anytime("2016/09/01 10:11:12"))
+expect_equal(ref, anytime("20160901 101112"))
+expect_equal(ref, anytime("20160901 10:11:12"))
+expect_equal(ref, anytime("09/01/2016 10:11:12"))
+expect_equal(ref, anytime("09-01-2016 10:11:12"))
+#expect_equal(ref, anytime("01.09.2016 10:11:12"))
 
+ref <- anytime("2016-09-01 10:11:12.345678")
+expect_equal(ref, anytime("2016-09-01 101112.345678"))
+expect_equal(ref, anytime("2016/09/01 10:11:12.345678"))
+expect_equal(ref, anytime("20160901 101112.345678"))
+expect_equal(ref, anytime("20160901 10:11:12.345678"))
+expect_equal(ref, anytime("09/01/2016 10:11:12.345678"))
+expect_equal(ref, anytime("09-01-2016 10:11:12.345678"))
+#expect_equal(ref, anytime("01.09.2016 10:11:12.345678"))
+
+
+ref <- format(anytime(c("2016-09-01 10:11:12", "2016-09-01 10:11:12.345678")))
 expect_equal(ref, format(anytime(c("2016-Sep-01 10:11:12", "2016-Sep-01 10:11:12.345678"))))
 expect_equal(ref, format(anytime(c("2016/Sep/01 10:11:12", "2016/Sep/01 10:11:12.345678"))))
 expect_equal(ref, format(anytime(c("2016Sep01 101112",     "2016Sep01 101112.345678"))))
